# winhide

./: README.md  format.sh
client/: CMakeLists.txt
client/src/: main.c
client/src/network/: client.c  client.h  network.c  network.h
client/src/util/: config.c  config.h  util.h  window_list.c  window_list.h
plugin/: CMakeLists.txt  server.cpp  server.hpp  source.cpp  source.hpp  util.hpp  winhide.cpp
plugin/data/locale/: en-US.ini
